--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "test"
   },
   "author": "rt",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "parcel": "^2.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "process": "^0.11.10"
+  }
 }
